# spi-stats

./: .gitignore  DEPLOYMENT.md  Dockerfile  INSTALL.md  README.md  REPOSITORY.md  build.sh  docker-compose.1.14inch.yml  docker-compose.1.47inch.yml  docker-compose.1.9inch.yml  docker-compose.yml  install-deps.sh  pyproject.toml  requirements.txt  run-local.sh  run.sh  stats.py  stop.sh  test_visual_mode.py
.github/workflows/: docker-image.yml
src/: display_config.py  rendering.py  stat_row.py  stats.py  system_stats.py  test_display.py
