[project]
name = "spi-stats"
version = "1.0.0"
description = "System monitoring stats displayed on a Raspberry Pi with an SPI display"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "cybermaak" }
]
keywords = ["raspberry-pi", "spi", "display", "system-monitor", "st7789"]

dependencies = [
    "psutil>=5.9.0",
    "humanize>=4.13.0",
    "adafruit-circuitpython-rgb-display",
    "pillow>=10.0.0",
    "adafruit-blinka>=8.0.0",
    "RPi.GPIO>=0.7.0",
    "spidev>=3.6",
]

[dependency-groups]
dev = [
    "yapf>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.yapf]
based_on_style = "google"
column_limit = 120
indent_width = 4
